# g1_navigation_ros2

src/pcd2pgm_package/pcd2pgm/: CMakeLists.txt  package.xml
src/pcd2pgm_package/pcd2pgm/launch/: run.launch.py
src/pcd2pgm_package/pcd2pgm/src/: pcd2pgm.cpp
src/ros_navigation_humanoid/: CMakeLists.txt  README_CN.md  package.xml
src/ros_navigation_humanoid/include/: bag_play.hpp  footstep_sim.hpp  lidar_simulator.hpp  odom_simulator.hpp  point_cloud_display.hpp  rviz_sim.hpp
src/ros_navigation_humanoid/launch/: bag_play.launch.py  conv_pcd2pgm.launch.py  foot_planner.launch.py  gazebo_sim.launch.py  map_server.launch.py  mapping.launch.py  nav2_navigation_launch.py  navigation.launch.py  robot_desc.launch.py  rviz_nav.launch.py  rviz_sim.launch.py  static_display.launch.py
src/ros_navigation_humanoid/maps/: map.yaml
src/ros_navigation_humanoid/move_base_config/: base_local_planner_params.yaml  costmap_config.yaml  local_costmap_params.yaml  nav2_params.yaml  nav2_params_0807.yaml  nav2_params_3d.yaml  nav2_params_single.yaml  slam_config.yaml
src/ros_navigation_humanoid/robot_descriptions/unitree_g1/: g1_29dof_with_hand.urdf  g1_29dof_with_hand_0801.urdf  g1_29dof_with_hand_gazebo.xacro
src/ros_navigation_humanoid/rviz/: conv_pcd2pgm.rviz  rviz_nav.rviz  rviz_sim.rviz  static_display.rviz
src/ros_navigation_humanoid/src/: bag_play.cpp  footstep_sim.cpp  lidar_simulator.cpp  odom_simulator.cpp  point_cloud_display.cpp  rviz_sim.cpp
src/ros_navigation_humanoid/worlds/: room.world
